--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FHIRAIDb": "Server=127.0.0.1;Port=5432;Database=FHIRAIDb;Username=admin;Password=password;"
+    "FHIRAIDb": "Server=127.0.0.1;Port=5432;Database=FHIRAIDb;Username=postgres;Password=Post:!@#4;"
   },
   "Logging": {
     "LogLevel": {
