--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="Hl7.Fhir.R4B" />
   </ItemGroup>
 
   <ItemGroup>
