Update default administrator credentials and connection string; remove obsolete NSwag configuration and OpenAPI specification files; adjust Swagger middleware order and launch settings for improved development experience.

--- a/src/Web/Properties/launchSettings.json
+++ b/src/Web/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61846",
+      "applicationUrl": "http://localhost:8012",
       "sslPort": 44312
     }
   },
@@ -11,6 +11,7 @@
     "FHIRAI.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,6 +20,7 @@
       "IIS Express": {
         "commandName": "IISExpress",
         "launchBrowser": true,
+        "launchUrl": "swagger",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
